Sutter Health/src/objects/SHMMN_Information__c.object
<CustomObject>
    <fields>
        <fullName>Account1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SHMMN_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Tier__c</fullName>
        <label>Account Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Accounts</fullName>
                </value>
                <value>
                    <fullName>Affiliate Projects</fullName>
                </value>
                <value>
                    <fullName>Meaningful Accounts</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliate_Project__c</fullName>
        <label>Affiliate Project</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bay Area Project 1</fullName>
                </value>
                <value>
                    <fullName>Bay Area Project 2</fullName>
                </value>
                <value>
                    <fullName>Bay Area Project 3</fullName>
                </value>
                <value>
                    <fullName>Valley Area Project 1</fullName>
                </value>
                <value>
                    <fullName>Valley Area Project 2</fullName>
                </value>
                <value>
                    <fullName>Valley Area Project 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health Plan Information Request</fullName>
                </value>
                <value>
                    <fullName>Lead / Opportunity Out reach</fullName>
                </value>
                <value>
                    <fullName>RFP Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bay Area</fullName>
                </value>
                <value>
                    <fullName>Valley</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Interest__c</fullName>
        <label>Market Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Action Plan</fullName>
                </value>
                <value>
                    <fullName>Biometrics</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Etips</fullName>
                </value>
                <value>
                    <fullName>Executive Health</fullName>
                </value>
                <value>
                    <fullName>Flu Clinic</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Wellness Screening Committee</fullName>
                </value>
                <value>
                    <fullName>Health Coaching</fullName>
                </value>
                <value>
                    <fullName>Health Fairs</fullName>
                </value>
                <value>
                    <fullName>HRA</fullName>
                </value>
                <value>
                    <fullName>IHH</fullName>
                </value>
                <value>
                    <fullName>LWFL Program</fullName>
                </value>
                <value>
                    <fullName>Mobile Clinic</fullName>
                </value>
                <value>
                    <fullName>Occupational Health</fullName>
                </value>
                <value>
                    <fullName>Onsite Clinics</fullName>
                </value>
                <value>
                    <fullName>Onsite lectures</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment Participation</fullName>
                </value>
                <value>
                    <fullName>PEP Product</fullName>
                </value>
                <value>
                    <fullName>Quarterly Newsletter</fullName>
                </value>
                <value>
                    <fullName>Service Line promotion</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Sutter Care At Home</fullName>
                </value>
                <value>
                    <fullName>Sutter Health Plus (SHP)</fullName>
                </value>
                <value>
                    <fullName>Tele-Medicine</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Month__c</fullName>
        <label>Open Enrollment Month</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Line_Product_Promotion__c</fullName>
        <label>Service Line/Product Promotion</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bariatric</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Elder Care</fullName>
                </value>
                <value>
                    <fullName>Executive Health</fullName>
                </value>
                <value>
                    <fullName>IHH</fullName>
                </value>
                <value>
                    <fullName>Lung Nodule Clinic</fullName>
                </value>
                <value>
                    <fullName>Men&apos;s Health</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Neuroscience</fullName>
                </value>
                <value>
                    <fullName>Occupational Medicine</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Orthopedics</fullName>
                </value>
                <value>
                    <fullName>SHP (Sutter Health Plus)</fullName>
                </value>
                <value>
                    <fullName>Sutter Care at Home</fullName>
                </value>
                <value>
                    <fullName>Womens and Children</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SHMMN Account Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SHMMN Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>